--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <!--
 @license
 Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
@@ -20,9 +20,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
   <link rel="import" href="../../paper-item/paper-item.html">
-  <link rel="import" href="../../paper-styles/demo-pages.html">
+  <link rel="import" href="../../iron-collapse/iron-collapse.html">
   <link rel="import" href="../paper-menu.html">
   <link rel="import" href="../paper-submenu.html">
+  <link rel="import" href="../../paper-styles/demo-pages.html">
 
   <style is="custom-style">
     .horizontal-section {
@@ -96,18 +97,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div class="horizontal-section">
         <paper-menu attr-for-item-title="label" multi>
           <paper-submenu label="paper-menu">
-            <paper-item class="menu-trigger">paper-menu</paper-item>
-            <paper-menu class="menu-content sublist" multi>
+            <paper-item class="menu-trigger" slot="menu-trigger">paper-menu</paper-item>
+            <paper-menu class="menu-content sublist" slot="menu-content" multi>
               <paper-submenu label="Properties">
-                <paper-item class="menu-trigger">Properties</paper-item>
-                <paper-menu class="menu-content sublist2">
+                <paper-item class="menu-trigger" slot="menu-trigger">Properties</paper-item>
+                <paper-menu class="menu-content sublist2" slot="menu-content">
                   <paper-item>focusedItem</paper-item>
                   <paper-item>attrForItemTitle</paper-item>
                 </paper-menu>
               </paper-submenu>
               <paper-submenu label="Methods">
-                <paper-item class="menu-trigger">Methods</paper-item>
-                <paper-menu class="menu-content sublist2">
+                <paper-item class="menu-trigger" slot="menu-trigger">Methods</paper-item>
+                <paper-menu class="menu-content sublist2" slot="menu-content">
                   <paper-item>select(value)</paper-item>
                 </paper-menu>
               </paper-submenu>
@@ -115,17 +116,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </paper-submenu>
 
         <paper-submenu label="paper-submenu">
-          <paper-item class="menu-trigger">paper-submenu</paper-item>
-          <paper-menu class="menu-content sublist">
+          <paper-item class="menu-trigger" slot="menu-trigger">paper-submenu</paper-item>
+          <paper-menu class="menu-content sublist" slot="menu-content">
             <paper-submenu label="Properties">
-              <paper-item class="menu-trigger">Properties</paper-item>
-              <paper-menu class="menu-content sublist2">
+              <paper-item class="menu-trigger" slot="menu-trigger">Properties</paper-item>
+              <paper-menu class="menu-content sublist2" slot="menu-content">
                 <paper-item>opened</paper-item>
               </paper-menu>
               </paper-submenu>
               <paper-submenu label="Methods">
-                <paper-item class="menu-trigger">Methods</paper-item>
-                <paper-menu class="menu-content sublist2">
+                <paper-item class="menu-trigger" slot="menu-trigger">Methods</paper-item>
+                <paper-menu class="menu-content sublist2" slot="menu-content">
                   <paper-item>open()</paper-item>
                   <paper-item>close()</paper-item>
                   <paper-item>toggle()</paper-item>
@@ -135,8 +136,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </paper-submenu>
 
           <paper-submenu label="Unavailable" disabled>
-            <paper-item class="menu-trigger">Unavailable</paper-item>
-            <paper-menu class="menu-content sublist">
+            <paper-item class="menu-trigger" slot="menu-trigger">Unavailable</paper-item>
+            <paper-menu class="menu-content sublist" slot="menu-content">
               <paper-item>Unavailable 1</paper-item>
               <paper-item>Unavailable 2</paper-item>
             </paper-menu>
