--- a/paper-menu.html
+++ b/paper-menu.html
@@ -9,8 +9,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../iron-menu-behavior/iron-menu-behavior.html">
 <link rel="import" href="../paper-styles/default-theme.html">
+<link rel="import" href="../paper-styles/color.html">
 <link rel="import" href="paper-menu-shared-styles.html">
 
 <!--
@@ -82,7 +84,7 @@ of a menu item will also focus it.
     </style>
 
     <div class="selectable-content">
-      <content></content>
+      <slot></slot>
     </div>
   </template>
 
