--- a/paper-submenu.html
+++ b/paper-submenu.html
@@ -9,8 +9,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../iron-menu-behavior/iron-menu-behavior.html">
 <link rel="import" href="../iron-behaviors/iron-control-state.html">
 <link rel="import" href="../iron-collapse/iron-collapse.html">
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../paper-styles/default-theme.html">
+<link rel="import" href="../paper-styles/color.html">
 <link rel="import" href="paper-menu-shared-styles.html">
 
 <!--
@@ -58,10 +62,10 @@ item has bolded text. Please see the `<paper-menu>` docs for which attributes
     <style include="paper-menu-shared-styles"></style>
 
     <div class="selectable-content" on-tap="_onTap">
-      <content id="trigger" select=".menu-trigger"></content>
+      <slot id="trigger" name="menu-trigger"></slot>
     </div>
     <iron-collapse id="collapse" opened="{{opened}}">
-      <content id="content" select=".menu-content"></content>
+      <slot id="content" name="menu-content"></slot>
     </iron-collapse>
   </template>
 
@@ -123,7 +127,7 @@ item has bolded text. Please see the `<paper-menu>` docs for which attributes
         this.listen(this.__parent, 'iron-activate', '_onParentIronActivate');
       },
 
-      detached: function() {
+      dettached: function() {
         this.unlisten(this.__parent, 'iron-activate', '_onParentIronActivate');
       },
 
